# leptos-studio

./: .commitlintrc.js  .dockerignore  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FEATURES.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  Trunk.toml  check_braces.py  deny.toml  design.md  docker-compose.yml  index.html  projects.json  requirements.md  style.css  tasks.md  trunk_log.txt
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: deep-plan.agent.md  my-agent.agent.md
.github/chatmodes/: Plan.chatmode.md
.github/workflows/: benchmark.yml  broken-links.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  labeler.yml  pr-checks.yml  release.yml  security.yml  stale.yml
.kiro/specs/production-ready-refactor/: design.md  requirements.md  tasks.md
backend/: Cargo.toml  analytics.json  projects.json
backend/src/: analytics.rs  git.rs  main.rs  templates.rs
frontend/: .gitlab-ci.yml  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  SECURITY.md  Trunk.toml  deny.toml  style.css
frontend/src/: app.rs  lib.rs
frontend/src/builder/: code_panel.rs  command_palette.rs  component_constraints.rs  component_palette.rs  context_menu.rs  debug_panel.rs  design_tokens.rs  drag_drop.rs  export_modal.rs  history_panel.rs  keyboard.rs  mod.rs  preview.rs  project_dashboard.rs  property_editor.rs  property_inputs.rs  responsive_preview.rs  save_template_modal.rs  settings_modal.rs  shortcuts_modal.rs  sidebar.rs  snackbar.rs  styling_system.rs  template_gallery.rs  theme_editor.rs  toolbar.rs  tree_view.rs  variable_binding.rs  variable_panel.rs  welcome_modal.rs
frontend/src/builder/canvas/: empty_state.rs  mod.rs  renderer.rs
frontend/src/builder/git_panel/: log_list.rs
frontend/src/builder/hooks/: mod.rs  use_export_actions.rs  use_git.rs  use_keyboard_actions.rs  use_resize.rs
frontend/src/builder/property_editors/: animation.rs  button.rs  card.rs  container.rs  custom.rs  event.rs  image.rs  input.rs  mod.rs  select_property_editor.rs  text.rs  variable_binding.rs
frontend/src/domain/: component.rs  error.rs  mod.rs  style.rs
frontend/src/pages/: dashboard.rs  editor.rs
frontend/src/services/: analytics_service.rs  event_bus.rs  export_advanced.rs  export_service.rs  git_factory.rs  git_service.rs  local_storage_git.rs  local_storage_git_test.rs  mod.rs  project_manager.rs  project_service.rs  remote_git.rs  template_service.rs
frontend/src/state/: app_state.rs  history.rs  mod.rs  project.rs
frontend/src/utils/: async_task.rs  file.rs  format.rs  mod.rs  sanitize.rs  syntax_highlight.rs
frontend/tests/: accessibility_test.rs  export_tests.rs  git_flow_test.rs
src/: app.rs  constants.rs  lib.rs  main.rs
src/builder/: accessibility.rs  auth_modal.rs  breadcrumb.rs  breakpoint_editor.rs  canvas.rs  code_panel.rs  codegen.rs  command_palette.rs  component_constraints.rs  component_library.rs  component_library_enhanced.rs  component_palette.rs  debug_panel.rs  design_tokens.rs  drag_drop.rs  export.rs  export_modal.rs  git_panel.rs  history_panel.rs  keyboard.rs  mod.rs  preview.rs  project.rs  project_dashboard.rs  property_editor.rs  property_inputs.rs  responsive_preview.rs  sidebar.rs  snackbar.rs  status_bar.rs  styling_system.rs  template_gallery.rs  theme_editor.rs  toolbar.rs  tree_view.rs  welcome_modal.rs
src/builder/canvas/: mod.rs  renderer.rs
src/builder/git_panel/: auth_placeholder.rs  log_list.rs  mod.rs  status_display.rs
src/builder/hooks/: mod.rs  use_export_actions.rs  use_git.rs  use_keyboard_actions.rs  use_resize.rs
src/builder/property_editors/: animation.rs  button.rs  card.rs  container.rs  custom.rs  event.rs  image.rs  input.rs  mod.rs  select_property_editor.rs  text.rs
src/components/: button.rs  container.rs  input.rs  mod.rs  text.rs
src/domain/: component.rs  error.rs  mod.rs  validation.rs  variable.rs
src/services/: analytics_service.rs  auth_service.rs  event_bus.rs  export_advanced.rs  export_service.rs  git_factory.rs  git_service.rs  local_storage_git.rs  local_storage_git_test.rs  mod.rs  project_manager.rs  project_service.rs  property_service.rs  template_service.rs
src/state/: app_state.rs  derived.rs  history.rs  mod.rs  persistence.rs  project.rs
src/utils/: async_task.rs  clipboard.rs  dom.rs  file.rs  format.rs  mod.rs  sanitize.rs  syntax_highlight.rs
tests/: accessibility_test.rs  auth_test.rs  basic.rs  export_tests.rs  git_dirty_test.rs  git_flow_test.rs  integration.rs  tests.rs  wasm_smoke.rs
