
[package]
name = "leptos_studio"
version = "0.2.3"
edition = "2024"
description = "Visual UI builder for Leptos framework"
license = "Apache 2.0"
repository = "https://gitlab.com/analisiskebutuhan/leptos-studio"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.5", features = ["csr"] }
leptos_router = { version = "0.8.5", features = ["csr"] }
leptos_dom = "0.8.5"
web-sys = { version = "0.3", features = [
    "DragEvent", "DataTransfer", "Window", "Storage", "console", 
    "HtmlInputElement", "FileList", "File", "Clipboard", "Navigator",
    "Element", "HtmlElement", "Event", "EventTarget"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace]
# Single crate workspace

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/leptos-rs/leptos-lints", tag = "v0.1.0" }]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[profile.dev]
debug = true
opt-level = 0

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = "s"
