[workspace]
resolver = "2"
members = [
    "frontend",
    "backend",
]

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/leptos-rs/leptos-lints", tag = "v0.1.0" }]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[profile.dev]
debug = true
opt-level = 0

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = "s"
