[package]
name = "backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.23", features = ["v4", "serde"] }
